--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -218,7 +218,7 @@
               <h2>Latest Products</h2>
               <hr />
               <ul class="product-controls">
-                <% for(let i of category) {%>
+                <!-- <% for(let i of category) {%>
                 <li>
                   <a
                     href="/home/<%=i.name %>"
@@ -226,7 +226,7 @@
                     ><%=i.name %></a
                   >
                 </li>
-                <% } %>
+                <% } %> -->
               </ul>
             </div>
           </div>
