--- a/views/userView/userProductCategory.ejs
+++ b/views/userView/userProductCategory.ejs
@@ -174,11 +174,11 @@
               </figure>
               <div class="product-text">
                 <h6><%=p.name %></h6>
-                <% if (p.offer) { %>
-                  <span class="price"><del>₹ <%= p.rate %></del>
-                    <h5>₹ <%= p.discountAmount %></h5></span>
+                <% if (p.rate == p.discountAmount ) { %>
+                  <span class="price">₹ <%= p.rate %></span>                 
                   <% } else { %>
-                    <span class="price">₹ <%= p.rate %></span>
+                    <span class="price"><del>₹ <%= p.rate %></del>
+                      <h5>₹ <%= p.discountAmount %></h5></span>
                     <% } %>
               </div>
             </div>
