--- a/views/userView/rPayFail.ejs
+++ b/views/userView/rPayFail.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -28,6 +26,7 @@
     
 </head>
 
+
 <body>
     <!-- Page Preloder -->
     <div id="preloder">
@@ -50,62 +49,75 @@
         <div class="container-fluid">
             <div class="inner-header">
                 <div class="logo">
-                    <a href="/"><img src="/img/logo.png" alt=""></a>
+                    <a href="/"><img src="img/logo.png" alt=""></a>
                 </div>
             </div>
         </div>
     </header>
+ 
+ 
+ 
+ 
+<section id="sec1" class="vh-50 p-3" style="background-color: rgb(255, 255, 255)">
+    <div class="mask d-flex align-items-center h-50 gradient-custom-3">
+      <div class="container h-100">
+        <div
+          class="row d-flex justify-content-center align-items-center h-100"
+        >
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px">
+              <div class="card-body p-5">
+                <h2 class="text-uppercase text-center mb-5">
+                  Transaction Failed
+                </h2>
 
-
-
-
-
-<!-- main -->
-<div class="container mt-5">
-    <h2>Order History</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Image</th>
-                <th scope="col">Product</th>
-                <th scope="col">Status</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Price</th>
-                <th scope="col">Date</th>
-                <th scope="col">Details</th>
-                <!-- <th scope="col">Download Invoice</th> -->
-            </tr>
-        </thead>
-        <tbody>
-            <% dataOrder.forEach(function(item) { %>
-                <tr>
-                    <th scope="row"><img src="<%= item.img %>" alt="Product Image" style="height: 80px;"></th>
-                    <td><%= item.product %><br>Order id : <span><%= item.orderId %></span></td>
-                    <td><%= item.status %></td>
-                    <td><%= item.quentity %></td>
-                    <% if (item.amountPaid) { %>
-                        <td>₹ <%= item.amountPaid %></td>
-                    <% } else { %>
-                        <td>₹ <%= item.price %></td>
-                    <% } %>
-                    <td><%= item.orderDate.toLocaleDateString() %></td>
-                    <td><a href="/historyOrder?orderId=<%= item.orderId %>&product=<%= item.product %>" class="btn btn-dark">Details</a></td>
-                    <% if (item.status =="Delivered Successfully") { %>
-                    <td><a href="/invoice?orderId=<%= item.orderId %>&product=<%= item.product %>" class="btn btn-primary">Download</a></td>
-                    <% } %>
-                </tr>
-            <% }); %>
-            
-            <!-- Add more rows as needed -->
-        </tbody>
-    </table>
-</div>
-</div>
-</div>
-
-
-
-  <!-- Footer Section Begin -->
+                <p>Order Id: <%=id %></p>
+                <p>Order Date: <%=date.toLocaleString() %></p>
+                <p>Transaction failed due to some internal error.</p>
+                <div class="d-flex justify-content-center">
+                  <button
+                    id="repayment-button"
+                    onclick="retry_Payment(`<%=id %>-<%=amount%>`)"
+                    class="m-2 mb-0 mt-4 btn btn-danger"
+                  >
+                    Retry Payment
+                  </button>
+                  <!-- <button
+                    onclick="discard(`<%=id %>`)"
+                    class="m-2 mb-0 mt-4 btn btn-danger"
+                  >
+                    Discard
+                  </button> -->
+                  <!-- {{/if}} -->
+                </div>
+                <p style="font-size: 9px; padding-left: px">
+                  <sup>*</sup>
+                  Hit the discard button to cancel order and revert changes
+                </p>
+                <div class="d-flex justify-content-center m-2">
+                  <button
+                    onclick="location.href='/orderhistory'"
+                    type="submit"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                  >
+                    Goto Order History
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <!-- Footer Section Begin -->
   <footer class="footer-section spad">
     <div class="container">
         <div class="footer-widget">
@@ -193,6 +205,70 @@
 <script src="/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
+<script>
+  function retry_Payment(id) {
+    console.log("RAZORPAY PAYMENT INVOKED AGAIN");
+    console.log("Order ID is ", id);
+    $.ajax({
+      url: "/reRazorpay",
+      type: "POST",
+      data: { id: id },
+      success: function (res) {
+        if (res.success) {
+          var options = {
+            key: "" + res.key_id + "",
+            amount: "" + res.amount + "",
+            currency: "INR",
+            name: "getantiques",
+            order_id: "" + res.order_id + "",
+            handler: function (response) {
+              console.log("order id is: ", id);
+              window.open(`/orderPlaced?statuss=success`, "_self");
+            },
+            theme: {
+              color: "#2300a3",
+            },
+          };
+          var razorpayObject = new Razorpay(options);
+          razorpayObject.on("payment.failed", function (response) {
+            alert("TEST");
+            alert("Payment Failed");
+            console.log("Is this hitting?????--------------->failed");
+          });
+          razorpayObject.open();
+        } else {
+          alert(res.msg);
+          console.log("Razorpay Payment is success");
+
+        }
+      },
+    });
+  }
+
+  function discard(id) {
+    console.log("Order ID is: ", id);
+    Swal.fire({
+      text: "Cancelled & coupon if used any will be reverted",
+      confirmButtonColor: "#3085d6",
+      confirmButtonText: "Ok",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        fetch(`/discard_Online_Payment`, {
+          method: "post",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            id: id,
+          }),
+        });
+      }
+    });
+  }
+</script>
 
 </body>
 
