--- a/views/userView/userPayment.ejs
+++ b/views/userView/userPayment.ejs
@@ -107,9 +107,9 @@
                                         <div class="input-group">
                                             <input type="text"  class="form-control"
                                                 name="coupon" placeholder="Wallet Amount" id="Wallet"
-                                                 value="<%=userData[0].wallet%>"
-                                                max="<%=userData[0].wallet%>">
-                                                <p id="wallethidden" hidden><%=userData[0].wallet%></p>
+                                                 value="<%=wallet.wallet%>"
+                                                max="<%=wallet.wallet%>">
+                                                <p id="wallethidden" hidden><%=wallet.wallet%></p>
                                             <button onclick="applyWallet()" class="btn btn-secondary applyWallet"
                                                 id="applyWallet">use</button>
                                             <button onclick="removeWallet()"
