--- a/views/userView/userProfile.ejs
+++ b/views/userView/userProfile.ejs
@@ -89,13 +89,10 @@
                                             <% } %>
                                             
                                         </div>
-                                        <!-- <div class="card-body">
-                                            <a href="#" style=" color: white; text-decoration: none;">Wallet Amount : </a>
-                                            <span
-                                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success"
-                                                style="margin-left: 6%;">{{user.wallet}}</span>
+                                        <div class="card-body">
+                                            <a href="/wallet" style=" color: white; text-decoration: none;">Wallet Amount : </a>
 
-                                        </div> -->
+                                        </div>
                                         <div class="card-body">
                                             <a href="/orderhistory" style=" color: white; text-decoration: none;">Order History</a>
 
