--- a/views/userView/userOrderSiglePage.ejs
+++ b/views/userView/userOrderSiglePage.ejs
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -17,16 +14,18 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
-    <!-- Css Styles -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
+
+    <!-- Other Stylesheets -->
     <link rel="stylesheet" href="/css/nice-select.css" type="text/css">
     <link rel="stylesheet" href="/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    
 </head>
 
 <body>
@@ -34,17 +33,17 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    
+
     <!-- Search model -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
-	</div>
-	<!-- Search model end -->
+    <div class="search-model">
+        <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="search-close-switch">+</div>
+            <form class="search-model-form">
+                <input type="text" id="search-input" placeholder="Search here.....">
+            </form>
+        </div>
+    </div>
+    <!-- Search model end -->
 
     <!-- Header Section Begin -->
     <header class="header-section">
@@ -57,110 +56,104 @@
         </div>
     </header>
 
-
-
-<div class="container">
-    <h2>Order Details</h2>
-
-    <!-- <div class="row">
-        <div class="col-md-8">
-            <div class="card "> -->
-                <div class="card-body">
-                    <div style="display: flex;">
-
-                        <div>
-                            <img src="<%= data[0].img %>" alt="Product Image" style="height: 150px;">
-                            <h5 class="card-title">Order ID: <%= data[0].orderId %></h5>
-                            <p class="card-text">Order Date: <%= data[0].orderDate.toLocaleDateString() %></p>
-                        </div>
-                        <div style="color: gray; margin-left: 10%;">
-                            <h5 class="mt-4 mb-3">Product Name : <%= data[0].product %></h5>
-                            <ul class="list-group">
-                                <li class="list-group-item">Quantity: <%= data[0].quentity %> | Price: <%= data[0].price %></li>
-                            </ul>
-                            <h5 class="mt-4">Total Price: <%= data[0].price %></h5>
-                            <h5 class="mt-4">Amount Paid:₹ <%= data[0].amountPaid %></h5>
-                        </div>
-                        
-                    </div>
-
-                    <!--order status -->
-                    <div>
-                        <h5>Status</h5>
-                        <% if (data[0].status === 'Delivered Successfully') { %>
-                            <ul class="list-group">
-                                <% if (data[0].returnStatus) { %>
-                                    <% if (data[0].returnStatus === 2) { %>
-                                        <li class="list-group-item" style="color: red;">Return: Rejected</li>
-                                    <% } else { %>
-                                        <li class="list-group-item" style="color: green;">Return: Accepted</li>
-                                    <% } %>
-                                <% } else { %>
-                                    <% if (data[0].returnreason) { %>
-                                        <li class="list-group-item" style="color: red;">Return: Pending</li>
-                                    <% } else { %>
-                                        <li class="list-group-item" style="color: green;">Delivered Successfully</li>
-                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                            Return
-                                        </button>
-                                        <!-- Modal -->
-                                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                            <div class="modal-dialog">
-                                                <form action="/returnreason/<%= data[0].orderId %>?product=<%= data[0].product %>" method="post">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Return Product</h1>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <label class="form-control-label">Reason</label>
-                                                            <input type="text" class="form-control" name="reason">
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                            <button type="submit" class="btn btn-warning">Save changes</button>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    <% } %>
-                                <% } %>
-                            </ul>
-                        <% } else if (data[0].status === 'CANCELED') { %>
-                            <ul class="list-group">
-                                <li class="list-group-item" style="color: red;">CANCELED</li>
-                            </ul>
-                        <% } else { %>
-                            <ul class="list-group">
-                                <li class="list-group-item" style="color: rgb(214, 190, 146);"><%= data[0].status %></li>
-                                <li class="list-group-item"><a href="/cancelProduct?orderId=<%= data[0].orderId %>&product=<%= data[0].product %>" class="btn btn-danger">Cancel</a></li>
-                            </ul>
-                        <% } %>
-                    
-                        <!-- Product List -->
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card" style="background-color: rgb(35, 34, 34);">
-                            <div class="card-body" style="color: white;">
-                                <h5 class="card-title">Shipping Address</h5>
-                                <p class="card-text">Name : <%= data[0].username %></p>
-                                <p class="card-text">House Name : <%= data[0].address.houseName %></p>
-                                <p class="card-text">City: <%= data[0].address.city %></p>
-                                <p class="card-text">Country: <%= data[0].address.country %></p>
-                                <p class="card-text">Pin Code: <%= data[0].address.pincode %></p>
+    <!-- Main Content -->
+    <div class="container">
+        <h2>Order Details</h2>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="card ">
+                    <div class="card-body">
+                        <div style="display: flex;">
+                            <div class="p-3">
+                                <img src="<%= data[0].img %>" alt="Product Image" style="height: 150px;">
+                                <h6 class="card-title">Order ID: <%= data[0].orderId %></h6>
+                                <p class="card-text">Order Date: <%= data[0].orderDate.toLocaleDateString() %></p>
+                            </div>
+                            <div style="color: gray; margin-left: 10%;">
+                                <h6 class="mt-4 mb-3">Product Name : <%= data[0].product %></h6>
+                                <ul class="list-group">
+                                    <li class="list-group-item">Quantity: <%= data[0].quentity %> | Price: <%= data[0].price %></li>
+                                </ul>
+                                <h6 class="mt-4">Total Price: <%= data[0].price %></h6>
+                                <h6 class="mt-4">Amount Paid:₹ <%= data[0].amountPaid %></h6>
                             </div>
                         </div>
+                        
+                        <!-- Order Status -->
+                        <div class="p-3">
+                            <h5>Status</h5>
+                            <% if (data[0].status === 'Delivered Successfully') { %>
+                                <ul class="list-group">
+                                    <% if (data[0].returnStatus) { %>
+                                        <% if (data[0].returnStatus === 2) { %>
+                                            <li class="list-group-item" style="color: red;">Return: Rejected</li>
+                                        <% } else { %>
+                                            <li class="list-group-item" style="color: green;">Return: Accepted</li>
+                                        <% } %>
+                                    <% } else { %>
+                                        <% if (data[0].returnreason) { %>
+                                            <li class="list-group-item" style="color: red;">Return: Pending</li>
+                                        <% } else { %>
+                                            <li class="list-group-item" style="color: green;">Delivered Successfully</li>
+                                            <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                                Return
+                                            </button>
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <form action="/returnreason/<%= data[0].orderId %>?product=<%= data[0].product %>" method="post">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Return Product</h1>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <label class="form-control-label">Reason</label>
+                                                                <input type="text" class="form-control" name="reason">
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                                <button type="submit" class="btn btn-warning">Save changes</button>
+                                                            </div>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        <% } %>
+                                    <% } %>
+                                </ul>
+                            <% } else if (data[0].status === 'CANCELED') { %>
+                                <ul class="list-group">
+                                    <li class="list-group-item" style="color: red;">CANCELED</li>
+                                </ul>
+                            <% } else { %>
+                                <ul class="list-group">
+                                    <li class="list-group-item" style="color: rgb(214, 190, 146);"><%= data[0].status %></li>
+                                    <li class="list-group-item"><a href="/cancelProduct?orderId=<%= data[0].orderId %>&product=<%= data[0].product %>" class="btn btn-sm btn-danger">Cancel</a></li>
+                                </ul>
+                            <% } %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Shipping Address -->
+            <div class="col-md-4">
+                <div class="card" style="background-color: rgb(35, 34, 34);">
+                    <div class="card-body" style="color: white;">
+                        <h5 class="card-title">Shipping Address</h5>
+                        <p class="card-text">Name : <%= data[0].username %></p>
+                        <p class="card-text">House Name : <%= data[0].address.houseName %></p>
+                        <p class="card-text">City: <%= data[0].address.city %></p>
+                        <p class="card-text">Country: <%= data[0].address.country %></p>
+                        <p class="card-text">Pin Code: <%= data[0].address.pincode %></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-
-
-  <!-- Footer Section Begin -->
+   <!-- Footer Section Begin -->
 <footer class="footer-section spad">
     <div class="container">
         <div class="footer-widget">
