stock management issue fixed

--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -193,6 +193,7 @@
               <p><%=productDetails.description %></p>
               <ul class="tags">
                 <li><span>Category :</span><%=productDetails.category %></li>
+                <li><span>Stock :</span><%=productDetails.stock %></li>
               </ul>
               <!-- <div class="product-quantity">
                 <div class="pro-qty">
