--- a/views/userView/wallet.ejs
+++ b/views/userView/wallet.ejs
@@ -66,7 +66,7 @@
       class="d-flex flex-column align-items-center "
       style="min-height: 110px"
     >
-      <h1 class="title-page">Orders</h1>
+      <h1 class="title-page">Wallet</h1>
      
     </div>
   </div>
