--- a/views/userView/userOrderSiglePage.ejs
+++ b/views/userView/userOrderSiglePage.ejs
@@ -95,7 +95,7 @@
                                             <li class="list-group-item" style="color: red;">Return: Pending</li>
                                         <% } else { %>
                                             <li class="list-group-item" style="color: green;">Delivered Successfully</li>
-                                            <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <button type="button" style="width: 100px;" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                                 Return
                                             </button>
                                             <!-- Modal -->
