--- a/views/adminView/reportPage.ejs
+++ b/views/adminView/reportPage.ejs
@@ -20,6 +20,11 @@
                 <h5 class="bg-warning-light">Discounted Revenue</h5>
                 <p>₹ <%=totalSales[0].totalDiscountAmount%></p>
               </div>
+              <br>
+              <div class="col-md-4">
+                <h5 class="bg-warning-light">Overall Sales Count</h5>
+                <p><%=ordersCount%></p>
+              </div>
         </div>
         <div class="col-md-4">   
             <h5 class="mb-3">Sales Report</h5>
