--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -182,13 +182,13 @@
                     <span class="price"><del>₹ <%= productDetails.rate %></del>
                       <h5>₹ <%= productDetails.discountAmount %></h5></span>
                     <% } %>
-                <div class="rating">
+                <!-- <div class="rating">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
-                </div>
+                </div> -->
               </div>
               <p><%=productDetails.description %></p>
               <ul class="tags">
