--- a/views/userView/userOrderHistory.ejs
+++ b/views/userView/userOrderHistory.ejs
@@ -92,7 +92,16 @@
                     <td><a href="/historyOrder?orderId=<%= item.orderId %>&product=<%= item.product %>" class="btn btn-dark">Details</a></td>
                     <% if (item.status =="Delivered Successfully") { %>
                     <td><a href="/invoice?orderId=<%= item.orderId %>&product=<%= item.product %>" class="btn btn-primary">Download</a></td>
-                    <% } %>
+                    <% }  else if (item.status =="Payment Failed") { %>
+                    <td><a
+                        id="repayment-button"
+                        onclick="retry_Payment(`<%=id=item.orderId %>-<%=amount = item.amountPaid%>`)"
+                        class="btn btn-sm btn-danger"
+                      >
+                        Retry Payment
+                    </a></td>
+
+                    <%}%>
                 </tr>
             <% }); %>
             
@@ -193,6 +202,70 @@
 <script src="/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
+<script>
+    function retry_Payment(id) {
+      console.log("RAZORPAY PAYMENT INVOKED AGAIN");
+      console.log("Order ID is ", id);
+      $.ajax({
+        url: "/reRazorpay",
+        type: "POST",
+        data: { id: id },
+        success: function (res) {
+          if (res.success) {
+            var options = {
+              key: "" + res.key_id + "",
+              amount: "" + res.amount + "",
+              currency: "INR",
+              name: "getantiques",
+              order_id: "" + res.order_id + "",
+              handler: function (response) {
+                console.log("order id is: ", id);
+                window.open(`/orderPlaced?statuss=success`, "_self");
+              },
+              theme: {
+                color: "#2300a3",
+              },
+            };
+            var razorpayObject = new Razorpay(options);
+            razorpayObject.on("payment.failed", function (response) {
+              alert("TEST");
+              alert("Payment Failed");
+              console.log("Is this hitting?????--------------->failed");
+            });
+            razorpayObject.open();
+          } else {
+            alert(res.msg);
+            console.log("Razorpay Payment is success");
+  
+          }
+        },
+      });
+    }
+  
+    function discard(id) {
+      console.log("Order ID is: ", id);
+      Swal.fire({
+        text: "Cancelled & coupon if used any will be reverted",
+        confirmButtonColor: "#3085d6",
+        confirmButtonText: "Ok",
+      }).then((result) => {
+        if (result.isConfirmed) {
+          fetch(`/discard_Online_Payment`, {
+            method: "post",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              id: id,
+            }),
+          });
+        }
+      });
+    }
+  </script>
 
 </body>
 
