--- a/views/userView/userProfile.ejs
+++ b/views/userView/userProfile.ejs
@@ -90,7 +90,7 @@
                                             
                                         </div>
                                         <div class="card-body">
-                                            <a href="/wallet" style=" color: white; text-decoration: none;">Wallet Amount : </a>
+                                            <a href="/wallet" style=" color: white; text-decoration: none;">Wallet Amount </a>
 
                                         </div>
                                         <div class="card-body">
