new user register bugs fixed!!

--- a/views/userView/userProfile.ejs
+++ b/views/userView/userProfile.ejs
@@ -122,13 +122,13 @@
                                                 <li class="list-group-item"><strong>UserName: </strong> <%=userin%>
                                                 <li class="list-group-item"><strong>Email: </strong> <%=user.email%>
                                                 </li>
-                                                <li class="list-group-item"><strong>Phone: </strong> <%=userData.phone%>
+                                                <li class="list-group-item"><strong>Phone: </strong> <%=user.mobile%>
                                                 </li>
-                                                <li class="list-group-item"><strong>Address: </strong>
-                                                    <%=userData.address.houseName%>,
-                                                    <%=userData.address.city%></li>
+                                                <!-- <li class="list-group-item"><strong>Address: </strong>
+                                                    <%#=userData.address.houseName%>,
+                                                    <%#=userData.address.city%></li>
                                                 <li class="list-group-item"><strong>Pin Code: </strong>
-                                                    <%=userData.address.pincode%></li>
+                                                    <%#=userData.address.pincode%></li> -->
                                             </ul>
                                         </div>
                                     </div>
