--- a/views/userView/wallet.ejs
+++ b/views/userView/wallet.ejs
@@ -74,8 +74,7 @@
   <div class="container">
     <p style="font-size: large; color: black">
       Total Amount in Wallet:
-      <span 
-        >₹<%=walletData[0].wallet %></span
+      <span>₹ <%=wallet.wallet %></span
       >
     </p>
 
