Error page added !!

--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -235,7 +235,7 @@
 <script src="/assets/js/main.js" type="text/javascript"></script>
 <script src="/assets/js/custom-chart.js" type="text/javascript"></script>
 </body>
-<script defer src="https://cdn.crop.guide/loader/l.js?c=SCTTGY"></script>
+<script defer src="https://cdn.crop.guide/loader/l.js?c=VRJSQT"></script>
 <script>
   var nameError = document.getElementById('name-error');
   var discError = document.getElementById('disc_error');
