--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -112,7 +112,7 @@
       document.getElementById('discountAmount').value = offerPrice
     }
   </script>
-  <script defer src="https://cdn.crop.guide/loader/l.js?c=SCTTGY"></script>
+ <script defer src="https://cdn.crop.guide/loader/l.js?c=VRJSQT"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
