--- a/views/userView/userCheckOut.ejs
+++ b/views/userView/userCheckOut.ejs
@@ -163,14 +163,14 @@
                                                                 type="text" placeholder="Country"
                                                                 id="country" required>
                                                         </div>
-                                                        <!-- {{!-- <div class="form-check">
+                                                       <div class="form-check">
                                                             <input class="form-check-input" type="radio"
                                                                 name="newaddress" id="flexRadioDefault1">
                                                             <label class="form-check-label"
                                                                 for="flexRadioDefault1">
                                                                 Save Address
                                                             </label>
-                                                        </div> --}} -->
+                                                        </div> 
                                                     </div>
                                                     <div>
                                                         <button class="btn btn-primary">
